## 2018-04-19 • Updated dashboard.css to fix bug on IE

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -111,6 +111,7 @@
      position: absolute;
      display: block;
      z-index: 3;
+     left: 0;
      font-size: 14px;
      margin-top: 70px;
      margin-left: 40%;
